test/Serialization/AllowErrors/invalid-precedencegroup.code
// RUN: %empty-directory(%t)

// RUN: %target-language-frontend -verify -emit-module -experimental-allow-module-with-compiler-errors %s -o %t/error.codemodule
// RUN: %target-language-frontend -module-name error -emit-module -experimental-allow-module-with-compiler-errors %t/error.codemodule -o %t/error2.codemodule 2>&1 | %FileCheck %s

// CHECK: allowing deserialization of invalid declaration

precedencegroup SomePrecedence {
  associativity: right
  higherThan: MissingType // expected-error {{unknown precedence group 'MissingType'}}
}

infix operator <>: SomePrecedence
